# ocudu

./: .clang-format  .gdbinit  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .yamllint  CHANGELOG  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  COPYRIGHTS.txt  README.md
apps/cu_cp/: CMakeLists.txt  cu_cp.cpp  cu_cp_appconfig.h  cu_cp_appconfig_cli11_schema.cpp  cu_cp_appconfig_cli11_schema.h
apps/cu_up/: CMakeLists.txt  cu_up.cpp  cu_up_appconfig.h  cu_up_appconfig_cli11_schema.cpp  cu_up_appconfig_cli11_schema.h  cu_up_appconfig_validator.cpp  cu_up_appconfig_validator.h
apps/examples/radio/: CMakeLists.txt  radio_notifier_sample.h  radio_util_sample.cpp  rx_power_analyzer.cpp
apps/fbs/ngap_injector/: CMakeLists.txt  README.md  config.cpp  config.h  negative_tests.cpp  negative_tests.h  ngap_decoder.cpp  ngap_decoder.h  ngap_injector.cpp  pcap_parser.cpp  pcap_parser.h  sctp_transport.cpp  sctp_transport.h  sniffer.cpp  sniffer.h  state_machine.cpp  state_machine.h  types.h
apps/fbs/ngap_listener/: CMakeLists.txt  ngap_listener.cpp
apps/helpers/: CMakeLists.txt
apps/helpers/e2/: CMakeLists.txt  e2_cli11_schema.cpp  e2_cli11_schema.h  e2_config_yaml_writer.cpp  e2_config_yaml_writer.h  e2_metric_connector_manager.h
apps/helpers/f1u/: CMakeLists.txt  f1u_appconfig.h  f1u_appconfig_validator.cpp  f1u_appconfig_validator.h  f1u_cli11_schema.cpp  f1u_cli11_schema.h  f1u_config_yaml_writer.cpp  f1u_config_yaml_writer.h
apps/helpers/hal/: CMakeLists.txt  hal_appconfig.h  hal_cli11_schema.cpp  hal_cli11_schema.h
apps/helpers/logger/: CMakeLists.txt  logger_appconfig.h  logger_appconfig_cli11_schema.cpp  logger_appconfig_cli11_schema.h  logger_appconfig_cli11_utils.h  logger_appconfig_validator.cpp  logger_appconfig_validator.h  logger_appconfig_yaml_writer.cpp  logger_appconfig_yaml_writer.h
apps/helpers/metrics/: CMakeLists.txt  helpers.h  metrics_config.h  metrics_config_cli11_schema.cpp  metrics_config_cli11_schema.h  metrics_config_yaml_writer.cpp  metrics_config_yaml_writer.h  metrics_helpers.cpp  metrics_helpers.h
apps/helpers/network/: CMakeLists.txt  udp_appconfig.h  udp_cli11_schema.cpp  udp_cli11_schema.h  udp_config_yaml_writer.cpp  udp_config_yaml_writer.h
apps/helpers/tracing/: CMakeLists.txt  tracer_appconfig.h  tracer_appconfig_cli11_schema.cpp  tracer_appconfig_cli11_schema.h  tracer_appconfig_yaml_writer.cpp  tracer_appconfig_yaml_writer.h
apps/services/app_execution_metrics/: CMakeLists.txt  executor_metrics_config.h  executor_metrics_config_cli11_schema.cpp  executor_metrics_config_cli11_schema.h  executor_metrics_config_yaml_writer.cpp  executor_metrics_config_yaml_writer.h  executor_metrics_manager.h
apps/services/app_resource_usage/: CMakeLists.txt  app_resource_usage.cpp  app_resource_usage.h  app_resource_usage_config.h  app_resource_usage_config_cli11_schema.cpp  app_resource_usage_config_cli11_schema.h  app_resource_usage_config_yaml_writer.cpp  app_resource_usage_config_yaml_writer.h
apps/services/buffer_pool/: CMakeLists.txt  buffer_pool_appconfig.h  buffer_pool_appconfig_cli11_schema.cpp  buffer_pool_appconfig_cli11_schema.h  buffer_pool_config_yaml_writer.cpp  buffer_pool_config_yaml_writer.h  buffer_pool_manager.h
apps/services/remote_control/: CMakeLists.txt  isac_metrics_publisher.cpp  isac_metrics_publisher.h  remote_command.h  remote_control_appconfig.h  remote_control_appconfig_cli11_schema.cpp  remote_control_appconfig_cli11_schema.h  remote_server.cpp  remote_server.h  remote_server_metrics_gateway.h
apps/services/worker_manager/: CMakeLists.txt  cli11_cpu_affinities_parser_helper.cpp  cli11_cpu_affinities_parser_helper.h  os_sched_affinity_manager.h  pcap_executor_mapper.h  worker_manager.cpp  worker_manager.h  (+6 more)
lib/du/: CMakeLists.txt  README.md  du_cell_config_validation.cpp  du_update_config_helpers.cpp  o_du_factory.cpp  o_du_impl.cpp  o_du_impl.h
lib/fapi/: CMakeLists.txt  decorator_factory.cpp  message_loggers.cpp
lib/fapi_adaptor/: CMakeLists.txt  precoding_matrix_mapper.cpp  precoding_matrix_mapper_functions.h  precoding_matrix_repository.cpp  precoding_matrix_repository_builder.h  precoding_matrix_table_generator.cpp  uci_part2_correspondence_generator.cpp  uci_part2_correspondence_mapper.cpp  uci_part2_correspondence_repository.cpp  uci_part2_mapper_functions.h
lib/nrppa/: CMakeLists.txt  nrppa_asn1_converters.h  nrppa_asn1_helpers.h  nrppa_dummy_factory.cpp  nrppa_dummy_impl.cpp  nrppa_dummy_impl.h  nrppa_factory.cpp  nrppa_helper.cpp  nrppa_helper.h  nrppa_impl.cpp  nrppa_impl.h
lib/nru/: CMakeLists.txt  nru_packing.cpp
lib/ocudulog/: CMakeLists.txt  backend_worker.cpp  backend_worker.h  event_trace.cpp  log_backend_impl.h  object_repository.h  ocudulog.cpp  ocudulog_c.cpp  ocudulog_instance.h
lib/ocuduvec/: CMakeLists.txt  accumulate.cpp  add.cpp  bit.cpp  clip.cpp  compare.cpp  conversion.cpp  convolution.cpp  division.cpp  dot_prod.cpp  modulus_square.cpp  prod.cpp  sc_prod.cpp  subtract.cpp  unwrap.cpp
lib/ofh/: CMakeLists.txt  ofh_factories.cpp  ofh_metrics_collector_impl.cpp  ofh_metrics_collector_impl.h  ofh_sector_controller.cpp  ofh_sector_controller.h  ofh_sector_impl.cpp  ofh_sector_impl.h  operation_controller_dummy.h
lib/rlc/: CMakeLists.txt  README.md  rlc_am.md  rlc_am_entity.h  rlc_am_interconnect.h  rlc_am_pdu.cpp  rlc_am_pdu.h  rlc_base_entity.h  rlc_bearer_logger.h  rlc_bearer_metrics_collector.cpp  rlc_bearer_metrics_collector.h  rlc_factory.cpp  rlc_pdu_recycler.h  rlc_retx_queue.h  rlc_rx_am_entity.cpp  rlc_rx_am_entity.h  rlc_rx_entity.h  rlc_rx_metrics_container.h  rlc_rx_tm_entity.cpp  rlc_rx_tm_entity.h  rlc_rx_um_entity.cpp  rlc_rx_um_entity.h  rlc_sdu_queue_lockfree.h  rlc_tm_entity.h  rlc_tx_am_entity.cpp  rlc_tx_am_entity.h  rlc_tx_entity.h  rlc_tx_metrics_container.h  rlc_tx_tm_entity.cpp  rlc_tx_tm_entity.h  rlc_tx_um_entity.cpp  rlc_tx_um_entity.h  rlc_um_entity.h  rlc_um_pdu.h
lib/rohc/: CMakeLists.txt  rohc_factory.cpp  rohc_support.cpp
lib/rrc/: CMakeLists.txt  rrc_du_factory.cpp  rrc_du_impl.cpp  rrc_du_impl.h
(+5579 files in other folders)
